--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Base Apparel coming soon page</title>
-  <script src="JS/main.js" defer></script>
+  <script src="main.js" defer></script>
 </head>
 <body>
   <main>
     <section class="hero">
       <div class="logo">
-        <img src="./images/logo.svg" alt="">
+        <img src="./logo.svg" alt="">
       </div>
       <div class="hero-mobile"></div>
       <h1>
@@ -26,7 +26,7 @@
       <form class="form" id="form">
         <div class="inputBox" id="inputBox">
           <input type="text" id="email" name="email" placeholder="Email Address"> 
-          <button type="submit"><img src="./images/icon-arrow.svg" alt=""></button>
+          <button type="submit"><img src="./icon-arrow.svg" alt=""></button>
           
         </div>
         <span id="warning"></span>
